fix overlap

--- a/style.css
+++ b/style.css
@@ -9,17 +9,19 @@ thead th {
   position: sticky;
   top: 0;
   min-width: 80px;
+  z-index: 1;
 }
 
 tbody th {
   position: -webkit-sticky; /* for Safari */
   position: sticky;
   left: 0;
+  z-index: 1;
 }
 
 thead th:first-child {
   left: 0;
-  z-index: 1;
+  z-index: 2;
 }
 
 thead th {
